--- a/rectas_plano_cartesiano.ipynb
+++ b/rectas_plano_cartesiano.ipynb
@@ -160,20 +160,20 @@
    "source": [
     "## 1.2. Distancia entre puntos\n",
     "\n",
-    "Dados dos puntos distintos $$P_1(x_1,y_1)$$ y $$P_2(x_2,y_2)$$ tal y como se muestra en la siguiente figura:\n",
+    "Dados dos puntos distintos $P_1(x_1,y_1)$ y $P_2(x_2,y_2)$ tal y como se muestra en la siguiente figura:\n",
     "\n",
     "**Figura**\n",
     "\n",
-    "Entonces la fórmula para obtener la distancia entre $$P_1$$ y $$P_2$$ esta dada por:\n",
+    "Entonces la fórmula para obtener la distancia entre $P_1$ y $P_2$ esta dada por:\n",
     "\n",
     "> **Formula de la distancia entre puntos**: La distancia entre los puntos $$P_1(x_1,y_1)$$ y $$P_2(x_2,y_2)$$\n",
     "> cualesquiera, está dada por:\n",
     ">\n",
-    "> $$d(P_1,P_2 )=|P_1,P_2 |=√((x_2-x_1 )^2+(y_2-y_1 )^2 )$$\n",
+    "> $$d(P_1,P_2 )=|P_1,P_2 |=\\sqrt{(x_2-x_1 )^2+(y_2-y_1 )^2}$$\n",
     "\n",
     "#### Ejemplo\n",
     "\n",
-    "1. \tLocalice los puntos $$A(8,-5)$$ y $$B(3,7)$$ y encuentre la distancia entre estos."
+    "1. \tLocalice los puntos $A(8,-5)$ y $B(3,7)$ y encuentre la distancia entre estos."
    ],
    "metadata": {
     "collapsed": false,
@@ -212,7 +212,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "2. \t¿Cuál de los puntos $$P(1,2)$$ o $$Q(8,9)$$ está más cerca del punto $$A(5,3)$$?"
+    "2. \t¿Cuál de los puntos $P(1,2)$ o $Q(8,9)$ está más cerca del punto $A(5,3)$?"
    ],
    "metadata": {
     "collapsed": false,
@@ -261,7 +261,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "3. \tDetermine si los puntos $$P_1(7,1)$$, $$P_2(-4,-1)$$ y $$P_3(4,5)$$ son los vértices de un triángulo rectángulo."
+    "3. \tDetermine si los puntos $P_1(7,1)$, $P_2(-4,-1)$ y $P_3(4,5)$ son los vértices de un triángulo rectángulo."
    ],
    "metadata": {
     "collapsed": false,
@@ -352,7 +352,7 @@
     "\n",
     "**Ejemplo**\n",
     "\n",
-    "Encuentre el punto medio $$M$$ del segmento de recta de $$P_1(-2,3)$$ a $$P_2(4,-2)$$ y verifique que $$d(P_1,M)=d(P_2,M)$$"
+    "Encuentre el punto medio $M$ del segmento de recta de $P_1(-2,3)$ a $P_2(4,-2)$ y verifique que $$d(P_1,M)=d(P_2,M)$$"
    ],
    "metadata": {
     "collapsed": false
