--- a/rectas_plano_cartesiano.ipynb
+++ b/rectas_plano_cartesiano.ipynb
@@ -166,7 +166,7 @@
     "\n",
     "Entonces la fórmula para obtener la distancia entre $P_1$ y $P_2$ esta dada por:\n",
     "\n",
-    "> **Formula de la distancia entre puntos**: La distancia entre los puntos $$P_1(x_1,y_1)$$ y $$P_2(x_2,y_2)$$\n",
+    "> **Formula de la distancia entre puntos**: La distancia entre los puntos $P_1(x_1,y_1)$ y $P_2(x_2,y_2)$\n",
     "> cualesquiera, está dada por:\n",
     ">\n",
     "> $$d(P_1,P_2 )=|P_1,P_2 |=\\sqrt{(x_2-x_1 )^2+(y_2-y_1 )^2}$$\n",
@@ -346,13 +346,13 @@
     "\n",
     "Para hallar el punto medio de un segmento de recta se emplea la siguiente formula:\n",
     "\n",
-    "> **Cálculo del punto medio**: El punto medio $$M$$ del segmento de recta de $$P_1(x_1,y_1)$$ a $$P_2(x_2,y_2)$$ es:\n",
+    "> **Cálculo del punto medio**: El punto medio $M$ del segmento de recta de $P_1(x_1,y_1)$ a $P_2(x_2,y_2)$ es:\n",
     ">\n",
     "> $$\\left (\\frac{x_1+x_2}{2},\\frac{y_1+y_2}{2}\\right )$$\n",
     "\n",
     "**Ejemplo**\n",
     "\n",
-    "Encuentre el punto medio $M$ del segmento de recta de $P_1(-2,3)$ a $P_2(4,-2)$ y verifique que $$d(P_1,M)=d(P_2,M)$$"
+    "Encuentre el punto medio $M$ del segmento de recta de $P_1(-2,3)$ a $P_2(4,-2)$ y verifique que $d(P_1,M)=d(P_2,M)$"
    ],
    "metadata": {
     "collapsed": false
