--- a/rectas_plano_cartesiano.ipynb
+++ b/rectas_plano_cartesiano.ipynb
@@ -333,7 +333,7 @@
    "source": [
     "## 1.3. Punto medio\n",
     "\n",
-    "La siguiente figura muestra un segmento de recta entre dos puntos $$P_1(x_1,y_1)$$ y $$P_2(x_2,y_2 )$$"
+    "La siguiente figura muestra un segmento de recta entre dos puntos $P_1(x_1,y_1)$ y $P_2(x_2,y_2 )$"
    ],
    "metadata": {
     "collapsed": false
