--- a/rectas.ipynb
+++ b/rectas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -12,7 +12,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sympy.geometry import Point, Line, Segment\n",
-    "from IPython.display import display, Latex, Math\n",
+    "from IPython.display import display, Latex, Math, HTML\n",
     "from IPython.display import Markdown as md"
    ]
   },
@@ -24,12 +24,30 @@
     "## 1. Pendiente de una recta\n",
     "\n",
     "> **Pendiente de una recta**: La pendiente $m$ de una recta $L$ que no es vertical y pasa por los puntos $P_1(x_1,y_1)$ y $P_2(x_2,y_2)$ esta dada por:\n",
-    "> $$m=∆y/∆x=(y_2-y_1)/(x_2-x_1)$$\n"
+    "> $$m=\\Delta y/\\Delta x=(y_2-y_1)/(x_2-x_1)$$\n",
+    "\n",
+    "**Poner grafica**\n",
+    "\n",
+    "La inclinación (ya sea positiva o negativa) de una recta, depende del valor numérico de m, de tal manera que entre más grande sea. mayor es la inclinación (positiva o negativa). La siguiente grafica ilustra esto:"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "display(HTML('<iframe src=\"https://www.desmos.com/calculator/zytmxtncrj?embed\" width=\"500\" height=\"500\" style=\"border: 1px solid #ccc\" frameborder=0></iframe>'))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
