--- a/rectas.ipynb
+++ b/rectas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -12,7 +12,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sympy.geometry import Point, Line, Segment\n",
-    "from IPython.display import display, Latex, Math, HTML\n",
+    "from IPython.display import display, Latex, Math, HTML, IFrame\n",
     "from IPython.display import Markdown as md"
    ]
   },
@@ -39,15 +39,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [],
+   "execution_count": 23,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<IPython.lib.display.IFrame at 0x20c71f47e50>",
+      "text/html": "\n        <iframe\n            width=\"700\"\n            height=\"600\"\n            src=\"https://s3.amazonaws.com/duhaime/blog/visualizations/isolation-forests.html\"\n            frameborder=\"0\"\n            allowfullscreen\n        ></iframe>\n        "
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "display(HTML('<iframe src=\"https://www.desmos.com/calculator/zytmxtncrj?embed\" width=\"500\" height=\"500\" style=\"border: 1px solid #ccc\" frameborder=0></iframe>'))"
+    "IFrame(src='https://s3.amazonaws.com/duhaime/blog/visualizations/isolation-forests.html', width=700, height=600)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Hola"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
