--- a/rectas.ipynb
+++ b/rectas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -39,20 +39,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
-      "text/plain": "<IPython.lib.display.IFrame at 0x20c71f47e50>",
-      "text/html": "\n        <iframe\n            width=\"700\"\n            height=\"600\"\n            src=\"https://s3.amazonaws.com/duhaime/blog/visualizations/isolation-forests.html\"\n            frameborder=\"0\"\n            allowfullscreen\n        ></iframe>\n        "
+      "text/plain": "<IPython.lib.display.IFrame at 0x22b479f1df0>",
+      "text/html": "\n        <iframe\n            width=\"500\"\n            height=\"500\"\n            src=\"https://www.desmos.com/calculator/zytmxtncrj?style=border%3A+1px+solid+%23ccc&frameborder=0\"\n            frameborder=\"0\"\n            allowfullscreen\n        ></iframe>\n        "
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "IFrame(src='https://s3.amazonaws.com/duhaime/blog/visualizations/isolation-forests.html', width=700, height=600)"
+    "IFrame(src='https://www.desmos.com/calculator/zytmxtncrj', width=500, height=500, style=\"border: 1px solid #ccc\", frameborder=0)"
    ],
    "metadata": {
     "collapsed": false,
